# fw-intensity-rescale-winsorize

./: .gitignore  Dockerfile  README.md  manifest.json  pyproject.toml  requirements.txt  run.py
fw_gear_intensity_rescale_winsorize/: main.py  normalize_images.py  run_level.py  util.py
