[tool.poetry]
name = "fw-intensity-rescale-winsorize"
version = "0.0.0"
description = "Normalize an input image"
authors = ["D3b-TIRU <flywheel@d3b.center>"]
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://github.com/d3b-center/fw-intensity-rescale-winsorize"

[tool.poetry.dependencies]
python = "^3.9"
flywheel-gear-toolkit = "^0.5"
fw-core-client = "^1.0.2"
fw-file = "^1.0.3"
flywheel-sdk = "^16.16.7"
numpy = "1.23.5"
nibabel = "3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
